2010-4-5 Yu-Sung Su     <ys463@columbia.edu> 
   * R/mp.plot: add a clustered option, mp.plot now is able to cluster data 
        according to its missing pattern

2010-4-3 Yu-Sung Su     <ys463@columbia.edu> 
   * DESCRIPTION (Version, Date): 0.08-08
   * R/mi.info: add missing.index slot
   * R/plot.im: mi.scatterplot, take out alpha paramter
   * R/mi: new mi process, the missing of the outcome is imputed with observed value to start with


2010-3-31 Yu-Sung Su     <ys463@columbia.edu> 
   * R/mi.info: update.mi.info: fix the formula to get rid of excluded variables

2010-3-23 Yu-Sung Su     <ys463@columbia.edu> 
   * DESCRIPTION (Version, Date): 0.08-07
   * R/mi.info: coerce data into numeric to pass the new rule of cor()
   * R/mi.polr: fix a formula bug.

2010-2-23 Yu-Sung Su     <ys463@columbia.edu> 
   * R/mi: 
      1. clean up code.
      2. rewrite mi() to burnin iterations with noises.
      3. move post.run control into noise.control() as post.run.iters.
   * R/mi.misc: more internal functions for mi() are stored here.
   * R/AllGeneric: rewrite converged and bugs.mi generic functions.

2009-12-31 Yu-Sung Su     <ys463@columbia.edu> 
   * DESCRIPTION (Version, Date): 0.08-06
   * R/mi.info: fix a bug in the include slot of update.mi.info

2009-12-21 Yu-Sung Su     <ys463@columbia.edu> 
   * DESCRIPTION (Version, Date): 0.08-05
   * R/mi: clean up code.

2009-12-1 Yu-Sung Su  <ys463@columbia.edu> 
   * R/mi.continuous, mi.binary, mi.count: overwrite and use of mf objects to save 
      memory

2009-12-1 Yu-Sung Su  <ys463@columbia.edu> 
   * R/mi.continuous, mi.binary, mi.count: overwrite and use of mf objects to save 
      memory

2009-11-30 Yu-Sung Su     <ys463@columbia.edu> 
   * R/mi.continuous, mi.binary, mi.count: hide new X's into the draw.from.beta loop 
    to save memory.

2009-7-21 Yu-Sung Su     <ys463@columbia.edu> 
   * DESCRIPTION (Version, Date): 0.08-04
   * R/mi.info: fix a slot changing logic in update.mi.info

